--- a/todo/src/main/resources/templates/todoList.html
+++ b/todo/src/main/resources/templates/todoList.html
@@ -7,6 +7,7 @@
     <link th:href="@{/css/style.css}" rel="stylesheet" type="text/css" />
   </head>
   <body>
+    <a th:href="@{/todo/create}">新規追加</a>
     <table borber="1">
       <tr>
         <th>id</th>
