--- a/O2024-15/example/src/main/resources/templates/helloworld.html
+++ b/O2024-15/example/src/main/resources/templates/helloworld.html
@@ -1,15 +1,9 @@
-<!DOCTYPE html xmlns:th="http://www.thymeleaf.org">
-<html lang="ja">
-
+<!DOCTYPE html>
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>Document</title>
+    <title>Hello World</title>
 </head>
-
 <body>
-    <p th:text="${helloworld}"></p>
+    <h1 th:text="'Hello, World!'">Hello, World!</h1>
 </body>
-
 </html>
